added media queries

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,11 @@
 }
 
 @font-face {
+  font-family: "Playfair Display";
+  src: url("../assets/webfonts/PlayfairDisplay-Regular.ttf");
+}
+
+@font-face {
   font-family: "Noto Sans Bold";
   src: url("../assets/webfonts/NotoSans-Bold.ttf");
 }
@@ -58,23 +63,34 @@ body {
   }
 }
 
-.fz {
-  &-50 {
-    font-size: 50px !important;
-  }
-}
 
 .no-scroll {
   overflow: hidden !important;
 }
 
 .mb {
+  &-10 {
+    margin-bottom: 10px;
+  }
+
   &-20 {
     margin-bottom: 20px;
   }
 
+  &-50 {
+    margin-bottom: 50px;
+  }
+
   &-80 {
     margin-bottom: 80px;
+  }
+}
+
+.md {
+  &-mb50 {
+    @media (max-width: 767px) {
+      margin-bottom: 50px;
+    }
   }
 }
 
@@ -133,6 +149,14 @@ img {
       font-size: 75px;
       margin-bottom: 20px;
       color: #fff;
+
+      @media (max-width: 575px) {
+        font-size: 50px;
+      }
+
+      @media (max-width: 320px) {
+        font-size: 30px;
+      }
     }
 
     .path {
